--- a/webti/halaman2.html
+++ b/webti/halaman2.html
@@ -11,7 +11,7 @@
 <a href="halaman4.html">Halaman 4</a> 
 <hr>
 <p><div style="background: orchid"><P align="center"><font size="18" color="Beige">Biodata Saya</font></p></div>
-<h3><p align="center"><img src="GIF HTML.GIF" width="190" height="240"></img></p></h3>
+<h3><p align="center"><img src="logo undip.jpg" width="190" height="240"></img></p></h3>
 <p align="center"><i><b><font size="5" color="brown">Nama : Yasinta Fairani</font></b></i></p>
 <p align="center"><i><b><font size="5" color="brown">NIM : 13040123140155</font></b></i></p>
 <p align="center"><i><b><font size="5" color="brown">Tempat Tanggal Lahir : Jakarta, 12 September 2004</font></b></i></p>
