--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -86,7 +86,7 @@
                 "hai": "Hai juga!",
                 "bagaimana kabarmu?": "aku baik-baik saja",
                 "siapa namamu?": "aku chat boot"
-                "siapa orang paling cantik di duni?": "kamu ^^"
+                "siapa orang paling cantik di dunia?": "kamu ^^"
             };
             return responses[input.toLowerCase()] || "Maaf saya tidak tau";
         }
