--- a/webti/halaman2.html
+++ b/webti/halaman2.html
@@ -8,7 +8,10 @@
 <a href="halaman1.html">Halaman 1</a> |
 <a href="halaman2.html">Halaman 2</a> |
 <a href="halaman3.html">Halaman 3</a> |
-<a href="halaman4.html">Halaman 4</a> 
+<a href="halaman4.html">Halaman 4</a> |
+<a href="halaman5.html">Halaman 5</a> |
+<a href="halaman6.html">Halaman 6</a> | 
+<a href="halaman7.html">Halaman 7</a> |
 <hr>
 <p><div style="background: orchid"><P align="center"><font size="18" color="Beige">Biodata Saya</font></p></div>
 <h3><p align="center"><img src="GIF HTML.GIF" width="190" height="240"></img></p></h3>
