--- a/webti/halaman1.html
+++ b/webti/halaman1.html
@@ -8,7 +8,12 @@
 </marquee></h1>
 <hr>
 <a href="halaman1.html">Halaman 1</a> |
-<a href="halaman2.html">Halaman 2</a>
+<a href="halaman2.html">Halaman 2</a> |
+<a href="halaman3.html">Halaman 3</a> |
+<a href="halaman4.html">Halaman 4</a> |
+<a href="halaman5.html">Halaman 5</a> |
+<a href="halaman6.html">Halaman 6</a> |
+<a href="halaman7.html">Halaman 7</a> |
 <hr>
 <p>My first paragraph</p>
 <marquee direction="down" width="250" height="200" behavior="alternate" style="border:solid">
