--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
-    <style>
-<a href="halaman1.html">Halaman 1</a> |
+<!DOCTYPE html> <a href="halaman1.html">Halaman 1</a> |
 <a href="halaman2.html">Halaman 2</a> |
 <a href="halaman3.html">Halaman 3</a> |
 <a href="halaman4.html">Halaman 4</a> |
 <a href="halaman5.html">Halaman 5</a> |
 <a href="halaman6.html">Halaman 6</a> |
 <a href="halaman7.html">Halaman 7</a> |
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chatbot</title>
+    <style>
         body {
             font-family: Arial, sans-serif;
             display: flex;
