--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html> 
-<html lang="en"> <a href="halaman1.html">Halaman 1</a> |
-<a href="halaman2.html">Halaman 2</a> |
-<a href="halaman3.html">Halaman 3</a> |
-<a href="halaman4.html">Halaman 4</a> |
-<a href="halaman5.html">Halaman 5</a> |
-<a href="halaman6.html">Halaman 6</a> |
-<a href="halaman7.html">Halaman 7</a> |
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,6 +46,13 @@
             cursor: pointer;
         }
     </style>
+    <a href="halaman1.html">Halaman 1</a> |
+<a href="halaman2.html">Halaman 2</a> |
+<a href="halaman3.html">Halaman 3</a> |
+<a href="halaman4.html">Halaman 4</a> |
+<a href="halaman5.html">Halaman 5</a> |
+<a href="halaman6.html">Halaman 6</a> |
+<a href="halaman7.html">Halaman 7</a> |
 </head>
 <body>
     <div class="chat-container">
