--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -1,66 +1,3 @@
-<!DOCTYPE html> 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-        nav {
-            background: #eee;
-            padding: 10px;
-        }
-        nav a {
-            margin: 0 8px;
-            text-decoration: none;
-            color: blue;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        h2 {
-            margin: 20px 0;
-        }
-        .chat-container {
-            width: 300px;
-            height: 400px;
-            margin: auto;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-            overflow: hidden;
-        }
-        .chat-box {
-            flex: 1;
-            padding: 10px;
-            overflow-y: auto;
-        }
-        .chat-input {
-            display: flex;
-            border-top: 1px solid #ddd;
-        }
-        .chat-input input {
-            flex: 1;
-            padding: 10px;
-            border: none;
-            outline: none;
-        }
-        .chat-input button {
-            padding: 10px;
-            border: none;
-            background: blue;
-            color: white;
-            cursor: pointer;
-        }
-    </style>
 </head>
 <body>
     <!-- Navigasi di atas -->
@@ -73,5 +10,38 @@
         <a href="halaman6.html">Halaman 6</a> | 
         <a href="halaman7.html">Halaman 7</a>
     </nav>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Konversi Angka ke Pembilang</title>
+    <script>
+        function numberToWords(n) {
+            const satuan = ["", "Satu", "Dua", "Tiga", "Empat", "Lima", "Enam", "Tujuh", "Delapan", "Sembilan", "Sepuluh", "Sebelas"];
+            
+            if (n < 12) return satuan[n];
+            if (n < 20) return numberToWords(n - 10) + " Belas";
+            if (n < 100) return numberToWords(Math.floor(n / 10)) + " Puluh " + numberToWords(n % 10);
+            if (n < 200) return "Seratus " + numberToWords(n - 100);
+            if (n < 1000) return numberToWords(Math.floor(n / 100)) + " Ratus " + numberToWords(n % 100);
+            if (n < 2000) return "Seribu " + numberToWords(n - 1000);
+            if (n < 1000000) return numberToWords(Math.floor(n / 1000)) + " Ribu " + numberToWords(n % 1000);
+            if (n < 1000000000) return numberToWords(Math.floor(n / 1000000)) + " Juta " + numberToWords(n % 1000000);
+            return "Angka terlalu besar";
+        }
+
+        function convertNumber() {
+            let number = document.getElementById("numberInput").value;
+            let words = numberToWords(parseInt(number));
+            document.getElementById("result").innerText = words;
+        }
+    </script>
+</head>
+<body>
+    <h2>Konversi Angka ke Pembilang</h2>
+    <label for="numberInput">Masukkan Angka:</label>
+    <input type="number" id="numberInput" oninput="convertNumber()">
+    <p>Hasil: <span id="result"></span></p>
 </body>
 </html>
