--- a/webti/halaman6.html
+++ b/webti/halaman6.html
@@ -1,3 +1,14 @@
+</head>
+<body>
+    <nav>
+        <a href="halaman1.html">Halaman 1</a> | 
+        <a href="halaman2.html">Halaman 2</a> | 
+        <a href="halaman3.html">Halaman 3</a> | 
+        <a href="halaman4.html">Halaman 4</a> | 
+        <a href="halaman5.html">Halaman 5</a> | 
+        <a href="halaman6.html">Halaman 6</a> | 
+        <a href="halaman7.html">Halaman 7</a>
+    </nav>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -87,3 +98,4 @@
     </script>
 </body>
 </html>
+
