--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -50,15 +50,15 @@
 <body>
     </head>
 <body>
-<hr>
-<a href="halaman1.html">Halaman 1</a> |
-<a href="halaman2.html">Halaman 2</a> |
-<a href="halaman3.html">Halaman 3</a> |
-<a href="halaman4.html">Halaman 4</a> |
-<a href="halaman5.html">Halaman 5</a> |
-<a href="halaman6.html">Halaman 6</a> |
-<a href="halaman7.html">Halaman 7</a> |
-<hr>
+  <nav>
+        <a href="halaman1.html">Halaman 1</a> | 
+        <a href="halaman2.html">Halaman 2</a> | 
+        <a href="halaman3.html">Halaman 3</a> | 
+        <a href="halaman4.html">Halaman 4</a> | 
+        <a href="halaman5.html">Halaman 5</a> | 
+        <a href="halaman6.html">Halaman 6</a> | 
+        <a href="halaman7.html">Halaman 7</a>
+    </nav>
     <div class="chat-container">
         <div class="chat-box" id="chat-box"></div>
         <div class="chat-input">
