--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -50,7 +50,8 @@
 <body>
     </head>
 <body>
-  <nav>
+  <!-- Navigasi di atas -->
+    <nav>
         <a href="halaman1.html">Halaman 1</a> | 
         <a href="halaman2.html">Halaman 2</a> | 
         <a href="halaman3.html">Halaman 3</a> | 
