--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -60,6 +60,7 @@
         <a href="halaman6.html">Halaman 6</a> | 
         <a href="halaman7.html">Halaman 7</a>
     </nav>
+    <!-- Chatbot -->
     <div class="chat-container">
         <div class="chat-box" id="chat-box"></div>
         <div class="chat-input">
