--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -75,6 +75,8 @@
         <a href="halaman7.html">Halaman 7</a>
     </nav>
 
+    <h2>Selamat Datang di Halaman Chatbot</h2>
+
     <!-- Chatbot -->
     <div class="chat-container">
         <div class="chat-box" id="chat-box"></div>
