--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -10,27 +10,33 @@
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
-            text-align: center;
+            display: flex;
+            height: 100vh;
         }
         nav {
+            width: 180px;
             background: #eee;
-            padding: 10px;
+            padding: 20px;
+            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
         }
         nav a {
-            margin: 0 8px;
+            display: block;
+            margin: 10px 0;
             text-decoration: none;
             color: blue;
         }
         nav a:hover {
             text-decoration: underline;
         }
-        h2 {
-            margin: 20px 0;
-        }
         .chat-container {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .chat-box-wrapper {
             width: 300px;
             height: 400px;
-            margin: auto;
             background: white;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -64,25 +70,25 @@
 </head>
 <body>
 
-    <!-- Navigasi di atas -->
-    <hr>
-        <a href="halaman1.html">Halaman 1</a> | 
-        <a href="halaman2.html">Halaman 2</a> | 
-        <a href="halaman3.html">Halaman 3</a> | 
-        <a href="halaman4.html">Halaman 4</a> | 
-        <a href="halaman5.html">Halaman 5</a> | 
-        <a href="halaman6.html">Halaman 6</a> | 
+    <!-- Navigasi di samping kiri -->
+    <nav>
+        <a href="halaman1.html">Halaman 1</a>
+        <a href="halaman2.html">Halaman 2</a>
+        <a href="halaman3.html">Halaman 3</a>
+        <a href="halaman4.html">Halaman 4</a>
+        <a href="halaman5.html">Halaman 5</a>
+        <a href="halaman6.html">Halaman 6</a>
         <a href="halaman7.html">Halaman 7</a>
-    </hr>
-
-    <h2></h2>
+    </nav>
 
     <!-- Chatbot -->
     <div class="chat-container">
-        <div class="chat-box" id="chat-box"></div>
-        <div class="chat-input">
-            <input type="text" id="user-input" placeholder="Type a message...">
-            <button onclick="sendMessage()">Send</button>
+        <div class="chat-box-wrapper">
+            <div class="chat-box" id="chat-box"></div>
+            <div class="chat-input">
+                <input type="text" id="user-input" placeholder="Type a message...">
+                <button onclick="sendMessage()">Send</button>
+            </div>
         </div>
     </div>
 
